[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/testing/laser-tank/LaserTank.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/SourceCodePro.tres" type="DynamicFont" id=2]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 0.1, 1 )

[sub_resource type="CubeMesh" id=2]

size = Vector3( 3, 2, 5 )

[sub_resource type="SpatialMaterial" id=3]

albedo_color = Color( 0.589844, 0.589844, 0.589844, 1 )

[sub_resource type="CubeMesh" id=4]

size = Vector3( 2, 1, 2 )

[sub_resource type="SpatialMaterial" id=5]

albedo_color = Color( 0.402344, 0.402344, 0.402344, 1 )

[sub_resource type="CylinderMesh" id=6]

top_radius = 0.4
bottom_radius = 0.4
radial_segments = 32
rings = 1

[sub_resource type="SpatialMaterial" id=7]

albedo_color = Color( 0.253906, 0.253906, 0.253906, 1 )

[node name="LaserTank" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
shape = SubResource( 1 )

[node name="Base" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Turret" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.58977, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Barrel" type="MeshInstance" parent="Turret"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.02109, 1.96909 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Throttle" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -59.0
margin_right = 319.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
text = "Max forward speed:
Max reverse speed:
Throttle setting:
Throttle:"

[node name="FreelookY" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.76488, 0 )

[node name="FreelookX" type="Spatial" parent="FreelookY"]

[node name="CameraHolder" type="Spatial" parent="FreelookY/FreelookX"]

[node name="Camera" type="Camera" parent="FreelookY/FreelookX/CameraHolder"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
current = true
far = 1000.0

